add more test on DLL